# soip-v2

./: .env.example  .gitignore  Makefile  PLAN.md  README.md  docker-compose.yml  init.sql
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_add_status_location_application_link.py  0002_lowercase_opportunitycategory_enum.py  0003_rename_degree_add_year_state.py  0004_admin_foundation.py  0005_add_mode_state_start_date_fee_organizer.py  0006_password_reset_tokens.py  3c4c7c2d9e8a_add_opportunity_deadline_at.py  5d2a4e1b6c90_add_raw_domain_tags.py  9f2c1d5b7d21_add_opportunity_lineage_refs.py  aa95312127c4_initial_schema.py  b7e2a1c3d456_add_scrape_pages_and_content_chunks.py
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  alert.py  chat.py  interaction_log.py  magic_link.py  opportunity.py  password_reset.py  scrape.py  source.py  university.py  user.py
backend/app/routers/: __init__.py  admin.py  alerts.py  auth.py  chat.py  feedback.py  opportunities.py  users.py
backend/app/schemas/: __init__.py  admin.py  alert.py  auth.py  chat.py  feedback.py  opportunity.py  user.py
backend/app/scripts/: __init__.py  benchmark_dashboard.py  embed_pending.py  validate_scrape.py
backend/app/services/: admin_dashboard.py  alerts.py  auth.py  chat.py  chunker.py  email_service.py  (+13 more)
backend/scripts/: normalize_tags.py  seed_universities.py
backend/tests/: conftest.py  test_api.py  test_expiry.py  test_feedback.py  test_password_reset.py  test_pipeline.py  test_satisfaction.py
(+60 files in other folders)
